fix: 100vh doesn't overflow on mobile

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -31,8 +31,8 @@ body {
 
 #__next {
   position: relative;
-  min-height: 100vh;
-  max-height: 100vh;
+  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   margin: 0;
   display: flex;
   flex-direction: column;
